# essay-trajectories

./: CHANGES.md  CHUNKING_SETUP.md  CHUNK_CLEANING_README.md  OUTPUT_FORMAT.md  RESULTS.md  TEST_RESULTS.md  TRAJECTORY_ANALYSIS_README.md  main.py  pagi-draft-v21_mariana.tex  pyproject.toml  trajectory_analysis_method.md
FINAL/: student-B-FINAL-thinking week.md  student-D-FINAL-sense-of-self.md  student-E-FINAL-split-brain.md  student-G-FINAL-Do Machines Think_.md
META/: student-B-META-multiscalar-cognition.md  student-C-META-social-constructs.md  student-E-META-split-brain.md  student-G-META-do-machines-think.md
annex_figures/: displacement_summary_table.tex
blind-prompts/: README.md  metaprompt-design-rationale.md  metaprompt-v2.md  student-A-whose-thoughts.txt  student-B-multiscalar-cognition.txt  student-C-social-constructs.txt  student-D-sense-of-self.txt  student-E-split-brain.txt  student-F-animal-anxiety.txt  student-G-do-machines-think.txt
blind-prompts/FINAL/: student-A-FINAL-oh-my-innumerable-mes.md  student-C-FINAL-Essay_MG.md
blind-prompts/META/: student-A-META-whose-thoughts-are-an-llms-thoughts.md  student-D-META-sense-of-self.md  student-F-META-animal-anxiety.md
output/data/: batch_id.txt  batch_metadata.json  (+2 more)
plots/: displacement_summary_stats.csv
scripts/: 01_chunk.py  02_embed.py  03_metrics.py  04_figures.py  05_displacement_profiles.py  A-human_raw_response.txt  README_CHUNKING.md  clean_chunks.py  clean_chunks_batch.py  generate_annex_figures.py  retry_failed.py  summarize_chunks.py  test_api.py  test_batch_small.py
(+46 files in other folders)
